# sw-maestro-project

projects/team5-SomaAgent/soma-agent/: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
projects/team5-SomaAgent/soma-agent/.claude/: settings.json
projects/team5-SomaAgent/soma-agent/.claude/agents/: code-reviewer.md
projects/team5-SomaAgent/soma-agent/.github/workflows/: Claude PR Review Once.yml  ci.yml  pr-review.yml
projects/team5-SomaAgent/soma-agent/app/: config.py  main.py
projects/team5-SomaAgent/soma-agent/app/adapters/: calendar_mock.py  opensoma_client.py  qdrant_client.py  solar_chat_client.py  solar_client.py  webex_client.py
projects/team5-SomaAgent/soma-agent/app/agent/: graph.py  memory.py  prompts.py  tool_catalog.py
projects/team5-SomaAgent/soma-agent/app/api/: application.py  auth.py  deps.py  health.py  mentoring.py
projects/team5-SomaAgent/soma-agent/app/db/: session.py
projects/team5-SomaAgent/soma-agent/app/errors/: __init__.py  codes.py  exceptions.py  handlers.py
projects/team5-SomaAgent/soma-agent/app/services/: auth.py  (+8 more)
projects/team5-SomaAgent/soma-agent/docker/: Dockerfile  docker-compose.yml
projects/team5-SomaAgent/soma-agent/docs/: SPEC.md
projects/team5-SomaAgent/soma-agent/opensoma-sidecar/: .env.example  Dockerfile  package.json  tsconfig.json
projects/team5-SomaAgent/soma-agent/tests/: test_health.py
projects/team53-ai53/autocoin-ai/: .env.example  .gitignore  pyproject.toml  requirements.txt
projects/team53-ai53/autocoin-ai/.gemini/: config.yaml  styleguide.md
projects/team53-ai53/autocoin-ai/.github/: PULL_REQUEST_TEMPLATE.md
projects/team53-ai53/autocoin-ai/docs/: AI.md  ARCHITECTURE.md  BE.md  DATA.md  ENV.md  FE.md  README.md  SPEC.md  TEST_AND_DEMO.md  llm_integration_test_results.md  workflow_visualization.html
projects/team53-ai53/autocoin-ai/examples/: ambiguous_input.json  livermore_buy.json  rejection_result.json  wonyotti_buy.json  wonyotti_hold_low_conviction.json
projects/team53-ai53/autocoin-ai/plan/: CONTRACTS.md  DOWNSTREAM.md  FIXTURES.md  MASTER_PLAN.md  PHASES.md
projects/team53-ai53/autocoin-ai/poc/: README.md  poc_function_calling.py  poc_structured.py
projects/team53-ai53/autocoin-ai/qa-evidence/: REPORT.md  qa_b_runner.py  rollup.json
projects/team53-ai53/autocoin-ai/tests/: conftest.py  fixtures.py  test_boundaries.py  test_completion_reporting.py  test_contract.py  test_e2e_livermore.py  test_e2e_wonyotti.py  test_evaluator_summary.py  test_graph_visualization.py  test_http_api.py  test_intake.py  test_llm_live.py  test_policy.py  test_policy_risk_evaluator.py  test_resume.py  test_risk_agent.py  test_risk_gate.py  test_strategy.py  test_verification_report.py
(+414 files in other folders)
