[project]
name = "soma-agent"
version = "0.1.0"
description = "SomaAgent — natural language assistant for Software Maestro daily life"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "soma17th-ai5" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pymysql>=1.1",
    "cryptography>=43",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=24.4",
    "qdrant-client>=1.12",
    "langgraph>=0.2",
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
    "tomli>=2.0",
    "pypdf>=5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-beautifulsoup4>=4.12",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E501: 길이 제한은 ruff format이 처리
# B008: FastAPI Depends() 패턴은 의도적으로 함수 호출을 default로 사용
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# N802: 테스트 함수 이름은 SPEC convention `should_<behavior>_when_<condition>` 사용 — camelCase 허용.
# N806: 테스트 fixture 안의 SessionLocal 등 SQLAlchemy 관용 명명 허용.
"tests/*" = ["S101", "N802", "N806"]
"app/db/migrations/versions/*" = ["E", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["app/db/migrations/versions/"]
