[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocoin-ai"
version = "0.1.0"
description = "LangGraph-based standalone AI Agent for Binance Spot Testnet order-test workflows."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "langgraph>=0.2,<0.3",
  "python-dotenv>=1,<2",
  "google-genai>=1,<2",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1,<2",
  "httpx>=0.27,<1",
  "pytest>=7,<9",
]

[project.scripts]
autocoin-ai = "autocoin_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "live: requires GEMINI_API_KEY — skipped in CI by default",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportTypedDictNotRequiredAccess = false
